syntax = "proto3";
package dipstick.can.v1;

// CAN id
message Id {
  // 11-bit or 29-bit value depending on the is_extended field.
  uint32 value = 1;
  // True if the id is 29-bit, false if 11-bit.
  bool is_extended = 2;
}
